[gd_scene load_steps=3 format=2]

[ext_resource path="res://enemy/DroppingFlame.gd" type="Script" id=1]
[ext_resource path="res://enemy/Flame.tscn" type="PackedScene" id=2]

[node name="DroppingFlame" type="Node2D"]

script = ExtResource( 1 )
timeout = 2.0
time_to_live = 1.0
gravity_scale = 4.0

[node name="DropTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="DestroyTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Flame" parent="." index="2" instance=ExtResource( 2 )]

scale = Vector2( 0.630587, 0.604655 )

[connection signal="dropped" from="." to="." method="_on_DroppingFlame_dropped"]

[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]

[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]


